[package]
name = "cryptowatchlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
thiserror = "1.0.31"
tokio = "1.20.1"
serde = {version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["float_roundtrip"] }